--- a/frontend/components/layout/custom-cursor.module.sass
+++ b/frontend/components/layout/custom-cursor.module.sass
@@ -3,8 +3,10 @@
 .cursor
 	position: fixed
 	background-image: url("/images/cursor.png")
-	width: 86px 
-	height: 124px
+	background-repeat: no-repeat
+	background-size: contain
+	width: 8.6em*0.25
+	height: 12.4em*0.25
 	z-index: 100
 	pointer-events: none
 
