--- a/frontend/components/page-components/services/services.module.sass
+++ b/frontend/components/page-components/services/services.module.sass
@@ -43,7 +43,7 @@
 		list-style-type: none
 		a
 			display: block
-			width: 10em
+			margin-right: 2.2em
 			font-size: 1.1em
 			line-height: 2.2em
 			&:before
